--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,11 @@
     <string name="pref_sort_order_key">SortOrder</string>
     <string name="sort_most_popular">Most Popular</string>
     <string name="sort_highest_rated"> Highest Rated</string>
+    <string name="trailer">Trailer</string>
+    <string name="favorite" translatable="false">Favorite Movies</string>
+    <string name="review">Review</string>
+    <string name="share">Share</string>
     <string name="pref_sortBy_title">Sort By:</string>
     <string name="pref_summary">Choose an order to sort.</string>
-    <string name="favorite" translatable="false">Favorite Movies</string>
-    <string name="trailer"> Trailer</string>
-
-
+    <string name="pref_sortBy_key" translatable="false">sort</string>
 </resources>
