--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="pref_sortBy_title">Sort By:</string>
     <string name="pref_summary">Choose an order to sort.</string>
     <string name="pref_sortBy_key" translatable="false">sort</string>
+    <string name="todo">TODO</string>
 </resources>
