--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,19 @@
 <resources>
+
     <string name="app_name">Popular Movies</string>
-    <string name="action_setting">setting</string>
-    <string name="name_movie">Movie Title</string>
     <string name="movie_details">Movie Details</string>
+    <string name="most_popular">Most Popular</string>
+    <string name="top_rated">Top Rated</string>
+    <string name="sort">Sort</string>
     <string name="overview">Overview</string>
-    <string name="rating">User Rating</string>
-    <string name="release_date">Release Date</string>
-    <string name="pref_sort_order_label">Sort By</string>
-    <string name="pref_sort_order_key">SortOrder</string>
-    <string name="sort_most_popular">Most Popular</string>
-    <string name="sort_highest_rated"> Highest Rated</string>
-    <string name="trailer">Trailer</string>
-    <string name="favorite" translatable="false">Favorite Movies</string>
-    <string name="review">Review</string>
-    <string name="share">Share</string>
-    <string name="pref_sortBy_title">Sort By:</string>
-    <string name="pref_summary">Choose an order to sort.</string>
-    <string name="pref_sortBy_key" translatable="false">sort</string>
-    <string name="todo">TODO</string>
+    <string name="sort_by">Sort By</string>
+    <string name="movie_overview">Movie overview</string>
+    <string name="movie_release_date">Movie release date</string>
+    <string name="movie_rating">Movie rating</string>
+    <string name="movie_title">Movie Title</string>
+    <string name="movie_name">Movie Name</string>
+    <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
+    <string name="favorites">Favorites</string>
+
 </resources>
